--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
     </header>
     <script>
-        alert('Hano tay, io fa tsy maintsy manaiky XD');
+        alert("Je t'aime");
     </script>
 
 
