Vita le banniere

--- a/index.html
+++ b/index.html
@@ -32,12 +32,18 @@
         </section>
         <!-- Banniere de la page -->
         <section class="banniere">
-            <p>test</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <div class="big">
+                <h2>Professional</h2>
+                <h2>Game <b>Developer</b></h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit a qui nostrum suscipit reiciendis
+                obcaecati! Lorem ipsum dolor</p>
+            <div class="contact_banniere">
+                <a href="#">Contact us</a>
+            </div>
         </section>
     </header>
-    <script>
-        alert('Hano tay, io fa tsy maintsy manaiky XD');
-    </script>
 
 
 </body>
